frontend/components/DataSet/_styles.scss
.data-set {
  font-size: $x-small;

  &__horizontal {
    display: flex;
    gap: $pad-small;
  }

  // ff only
  @-moz-document url-prefix() {
    display: flex;
    flex-direction: column;
    gap: 6px;
  }

  dt {
    font-weight: $bold;
    display: flex;
    gap: $pad-xsmall; // For deprecated sandbox icons
  }

  dd {
    display: flex;
    gap: $pad-small;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }
}

